--- a/static/style.css
+++ b/static/style.css
@@ -10,10 +10,106 @@ body {
   height: 700px;
   padding: 60px 80px;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 200px;
   font-weight: 400;
 }
 
 .form-signin .form-floating:focus-within {
   z-index: 2;
+}
+
+.floatingInput {
+  border-radius: 0;
+  box-shadow: none;
+  border-top: 1px;
+  border-left: 1px;
+  border-right: 1px;
+  cursor: pointer;
+}
+
+.form-floating > label {
+  color: #8e8e8e;
+  padding: 0;
+  padding-top: 18px;
+}
+
+.floatingInput:focus {
+  padding-left: 0;
+  border-bottom: 2px;
+}
+
+.line {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 15px 0;
+  font-size: 0;
+  line-height: 0;
+}
+
+.line::before {
+  display: inline-block;
+  width: calc(50% - 20px);
+  height: 1px;
+  margin: 8px 0;
+  background-color: rgba(0, 0, 0, 0.06);
+  vertical-align: top;
+  content: "";
+}
+
+.line::after {
+  display: inline-block;
+  width: calc(50% - 20px);
+  height: 1px;
+  margin: 8px 0;
+  background-color: rgba(0, 0, 0, 0.06);
+  vertical-align: top;
+  content: "";
+}
+
+.line_or {
+  display: inline-block;
+  width: 40px;
+  font-size: 12px;
+  line-height: 18px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.kakaoBtn {
+  display: inline-block;
+  overflow: hidden;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 1px;
+}
+
+#kakaoBtn {
+  height: 50px;
+  background-color: #fee500;
+  border: none;
+  color: #191919;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+#loginBtn {
+  height: 50px;
+  background-color: #000000;
+  border: none;
+  color: #ffffff;
+  font-size: 15px;
+  font-weight: 400;
+}
+
+#etc {
+  color: #000000b3;
+  font-size: 12px;
+}
+
+#account {
+  width: 100%;
+  margin-right: 10px;
+  padding-right: 10px;
+  border-right: 1px solid #e5e5e5;
 }
